--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <!-- <div class="col-12 col-md-6 col-lg-4"> -->
                 <div class="col-12">
                     <div class="appointment-box">
-                        <h2 class="d-flex align-items-center">Patient Enrollment</h2>
+                        <h2 class="d-flex align-items-center">Patient Search</h2>
 
                         <form class="d-flex flex-wrap justify-content-between">
                             <select class="select-department">
