--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 
                             <input type="text" placeholder="Insurance ID">
 
-                            <input class="button gradient-bg" type="submit" value="Pre Auth Form">
+<!--                             <input class="button gradient-bg" type="submit" value="Pre Auth Form"> -->
+                            <a href="https://sriharsha-konkathi.github.io/preauthform/" alt="" class="button gradient-bg" type="submit">Pre Auth Form</a>
                         </form>
                     </div>
                 </div>
