--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <input type="text" placeholder="Insurance ID">
 
 <!--                             <input class="button gradient-bg" type="submit" value="Pre Auth Form"> -->
-                            <a href="https://sriharsha-konkathi.github.io/preauthform/" alt="" class="button gradient-bg" type="submit">Pre Auth Form</a>
+                            <a href="https://sriharsha-konkathi.github.io/preauthform/" alt="" class="button gradient-bg">Pre Auth Form</a>
                         </form>
                     </div>
                 </div>
