--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                             <input type="text" placeholder="Insurance ID">
 
-                            <input class="button gradient-bg" type="submit" value="Pre Auth Form">
+                            <input class="button gradient-bg" type="submit" onClick="parent.location='https://sriharsha-konkathi.github.io/preauthform/'" value="Pre Auth Form">
 <!--                             <a href="https://sriharsha-konkathi.github.io/preauthform/" alt="" class="button gradient-bg">Pre Auth Form</a>
                          -->
                         </form>
